fix layout overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,15 +2,18 @@
     max-width: 350px;
 }
 
-section, footer {
+nav, section, footer {
     max-width: 1100px;
     margin: 0 auto;
 }
 
 nav {
     height: 48px;
-    max-width: 1076px;
-    margin: 0 auto;
+}
+
+@media screen and (max-device-width: 769px){
+    main { padding-right: 0!important;}
+    aside { padding-left: 0!important;}
 }
 
 #notification-indicator {
